--- a/src/main/resources/templates/cliente/formCliente.html
+++ b/src/main/resources/templates/cliente/formCliente.html
@@ -11,10 +11,7 @@
 <form action="" method="post">
 Nome: <input type="text" value="" name="nome" />
 CNPJ: <input type="text" value="" name="cnpj" />
-Sócio: <input type="text" value="" name="socio" />
-CPF: <input type="text" value="" name="cpf" />
-Telefone: <input type="text" value="" name="telefone" />
-Email: <input type="text" value="" name="email" />
+UF: <input type="text" value="" name="uf" />
 <br><br/>
 <button type="submit">Salvar</button>
 
